# raikopon

./: .gitmodules  CMakeLists.txt  README.md
CMakeModules/: GenerateSettingKeys.cmake
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt  horizon_audio_out.cpp  horizon_audio_out.h  horizon_sink.cpp  horizon_sink.h  sink_details.cpp  sink_details.h
src/citra_libretro/: CMakeLists.txt
src/citra_switch/: CMakeLists.txt  citra_switch.cpp  config.cpp  config.h  default_ini.h  emu_window.cpp  emu_window.h  emulation.cpp  harfbuzz_stubs.cpp  horizon_sys_stubs.cpp  input.cpp  input.h  keyboard_prompt.h  menu.cpp  menu.h  menu_data.cpp  menu_data.h  overlay_menu.cpp  overlay_menu.h  rail_icons.h
src/citra_switch/applets/: swkbd.cpp  swkbd.h  swkbd_horizon.cpp  swkbd_horizon.h
src/common/: CMakeLists.txt  file_util.cpp  horizon_boost.cpp  horizon_boost.h  horizon_thread.cpp  horizon_thread.h  microprofile.h  settings.cpp  settings.h  shader_compile_stats.cpp  shader_compile_stats.h  thread.cpp  thread_worker.h
src/common/aarch64/: cpu_detect.cpp
src/common/dynamic_library/: dynamic_library.cpp
src/core/: CMakeLists.txt  core.cpp  core.h
src/core/arm/: exclusive_monitor.cpp
src/core/arm/dynarmic/: arm_dynarmic.cpp
src/core/file_sys/: archive_nand.h  archive_ncch.cpp  archive_ncch.h  archive_selfncch.cpp  savedata_archive.cpp  savedata_archive.h
src/core/frontend/: emu_window.cpp  framebuffer_layout.cpp  framebuffer_layout.h
src/core/frontend/applets/: swkbd.h
src/core/hle/applets/: swkbd.cpp
src/core/hle/service/cam/: y2r_u.cpp  y2r_u.h
src/core/hle/service/fs/: file.cpp
src/core/hle/service/http/: http_c.cpp  http_c.h
src/core/hle/service/ldr_ro/: cro_helper.cpp  ldr_ro.cpp
src/core/hle/service/soc/: soc_u.cpp
src/core/loader/: artic.cpp  ncch.cpp
src/network/artic_base/: artic_base_client.cpp
src/tests/video_core/: shader.cpp
src/video_core/: CMakeLists.txt  overlay.cpp  overlay.h  rasterizer_accelerated.cpp  video_core.cpp
src/video_core/custom_textures/: custom_tex_manager.cpp  custom_tex_manager.h
src/video_core/host_shaders/: CMakeLists.txt  vulkan_overlay.frag
src/video_core/pica/: pica_core.cpp
src/video_core/rasterizer_cache/: rasterizer_cache.h
src/video_core/renderer_deko3d/: dk_common.h  dk_memory.cpp  dk_memory.h  dk_rasterizer.cpp  dk_rasterizer.h  dk_rasterizer_cache.cpp  dk_shader.cpp  dk_shader.h  dk_texture_runtime.cpp  dk_texture_runtime.h  renderer_deko3d.cpp  renderer_deko3d.h
src/video_core/renderer_deko3d/shaders/: present_fsh.glsl  present_vsh.glsl  ubershader_fsh.glsl  ubershader_vsh.glsl
src/video_core/renderer_opengl/: renderer_opengl.cpp
src/video_core/renderer_vulkan/: overlay_font.h  renderer_vulkan.cpp  renderer_vulkan.h  vk_common.h  vk_graphics_pipeline.cpp  vk_master_semaphore.cpp  vk_pipeline_cache.cpp  vk_platform.cpp  vk_present_window.cpp  vk_rasterizer.cpp  vk_rasterizer.h  vk_scheduler.cpp  vk_shader_disk_cache.cpp
src/video_core/renderer_vulkan/font/: bake_overlay_font.py
src/video_core/shader/: shader_jit.cpp  shader_jit.h  shader_jit_a64_compiler.cpp  shader_jit_a64_compiler.h
tools/: gen_rail_icons.py
